--- a/Script-investigaacion1.ipynb
+++ b/Script-investigaacion1.ipynb
@@ -33,6 +33,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f7378414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frases=input()\n",
+    "L=[]\n",
+    "while frases!=\"exit\":\n",
+    "    L.append(frases)\n",
+    "    if frases==\"exit\":\n",
+    "        break\n",
+    "    frases = input()\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8137c7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Declaramos el diccionario\n",
+    "def crear_data(x):\n",
+    "    tabla = dict()    \n",
+    "    if type(x)==list:\n",
+    "        \n",
+    "        for i in range(len(x)):\n",
+    "    \n",
+    "            tabla['tweets_list'+str(i+1)] = []\n",
+    "    else:\n",
+    "       for i in range(len(x)):\n",
+    "            tabla['tweets_df'+str(i+1)]  = pd.DataFrame(x['tweets_list'+str(i+1)], columns=['Datetime', 'Tweet Id', 'Text', 'Username'])         \n",
+    "    return(tabla)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dfc3b3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tablass=crear_data(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cfdd9c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "wanted-utility",
    "metadata": {
@@ -77,20 +133,20 @@
    ],
    "source": [
     "# establecemos el numero de tweets que deseamos extraer\n",
-    "maxTweets = 7000\n",
+    "maxTweets = 100\n",
     "start_time = datetime.now()\n",
     "# Se crea una lista para rellenarla con los datos extraidos de la web\n",
     "\n",
     "\n",
     "#se usa  hace un bucle para hacer el webscrapping con cada palabra y que se concatene en la lista vacia\n",
-    "for j in range(len(tablas)):\n",
-    "    for i,tweet in enumerate(sntwitter.TwitterSearchScraper(palabras[j]).get_items()):\n",
+    "for j in range(len(tablass)):\n",
+    "    for i,tweet in enumerate(sntwitter.TwitterSearchScraper(L[j]).get_items()):\n",
     "        if i>maxTweets:\n",
     "            break\n",
-    "        tablas['tweets_list'+str(j+1)].append([tweet.date, tweet.id, tweet.content, tweet.user.username])\n",
+    "        tablass['tweets_list'+str(j+1)].append([tweet.date, tweet.id, tweet.content, tweet.user.username])\n",
     "end_time = datetime.now()\n",
     "#Se hace un contador para saber el tiempo que se demora el algoritmo en extraer todos los datos\n",
-    "print('Duration: {}'.format(end_time - start_time))        "
+    "print('Duration: {}'.format(end_time - start_time))      "
    ]
   },
   {
@@ -100,6 +156,16 @@
    "source": [
     "for j in range(0,1):\n",
     "    print(j+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be695a50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=crear_data(tablass)"
    ]
   },
   {
